--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header class="header">
             <div class="profile">
-                <img src="assets/images/profile.png" alt="Minha foto de perfil">
+                <img src="assets/images/profile.png" alt="Minha foto de perfil"width="200" height="200">
                 <h1>DEMETRIUS PINTO DE LACERDA</h1>
                 <h2>ANALISTA E DESENVOLVEDOR DE SISTEMAS</h2>
                 <p>CONTATO: (81) 985733719</p>
